--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,45 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .loginbox {
-  color:#fff
+  text-align: center;
+}
+
+.loginbox h1 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.loginbox p {
+  text-align: left;
+  padding-left: 10px;
+  margin-bottom: 5px;
+}
+
+.loginbox input {
+  margin-bottom: 15px;
+}
+
+.loginbox input[type="text"], input[type="password"] {
+  border: none;
+  border-bottom: 1px solid;
+  background: transparent;
+  outline: none;
+}
+
+.loginbox input[type="submit"] {
+  border: none;
+  outline: none;
+  background: #720429;
+  color: #fff;
+  width: 100%;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
+.loginbox input[type="submit"]:hover {
+  cursor: pointer;
+  background: #440e20;
+
 }
 
 .aboutUsSection{
@@ -105,5 +143,7 @@ footer{
 }
 
 .avatar {
+  width: 50%;
   border-radius: 50%;
+  margin-top: 140px;
 }
