--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,43 @@
 body{
   font-family: 'Roboto', sans-serif;
-  background-color: #bcc8cc;
+  background-color: #c3c8ca;
   background-image: url(https://www.transparenttextures.com/patterns/asfalt-dark.png);
+  max-width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6{
   font-family: 'Raleway', sans-serif;
 }
 
-.loginbox {
-  text-align: center;
+.overfillno {
+  max-width: 100%;
 }
 
-.loginbox h1 {
-  margin-top: 10px;
-  margin-bottom: 10px;
+.loginspace {
+  max-height: 50vh;
+}
+
+.loginbox {
+  text-align: center;
+  margin-top: 50vh;
+  transform: translate(0, -50%);
+}
+
+.loginbox h2 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: #c3c8ca;
 }
 
 .loginbox p {
+  padding-left: 10%;
   text-align: left;
-  padding-left: 10px;
-  margin-bottom: 5px;
+  margin-bottom: 1%;
+  color: #c3c8ca;
 }
 
 .loginbox input {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 .loginbox input[type="text"], input[type="password"] {
@@ -32,6 +45,7 @@ h1, h2, h3, h4, h5, h6{
   border-bottom: 1px solid;
   background: transparent;
   outline: none;
+  width: 80%;
 }
 
 .loginbox input[type="submit"] {
@@ -39,7 +53,7 @@ h1, h2, h3, h4, h5, h6{
   outline: none;
   background: #720429;
   color: #fff;
-  width: 100%;
+  width: 50%;
   border-radius: 10px;
   font-size: 18px;
 }
@@ -47,42 +61,27 @@ h1, h2, h3, h4, h5, h6{
 .loginbox input[type="submit"]:hover {
   cursor: pointer;
   background: #440e20;
-
 }
 
-.aboutUsSection{
-  background-color: #ccc;
+.loginbox a {
+  text-decoration: none;
+  color: #494949;
+}
+
+.carded {
+  background-color: #111;
+  border-radius: 20px;
+  padding:35px;
 }
 
 .filled{
-  background-color: #bcc8cc;
+  background-color: #c3c8ca;
   background-image: url(https://www.transparenttextures.com/patterns/asfalt-dark.png);
 }
 
 footer{
   background-color: #111;
   color: #fff;
-}
-
-.titlemain {
-  margin: 0;
-  position: absolute;
-  text-align: center;
-  left: 50%;
-  top: 55%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-}
-
-.topspace {
-  margin-top: 100vh;
-}
-
-.logo {
-  margin: 0;
-  padding-top: 25%;
-  position: absolute;
-  left: 45%;
 }
 
 .wait {
@@ -95,7 +94,6 @@ footer{
 
 .nav {
   margin-right: 10px;
-
 }
 
 .btn-primary{
@@ -122,12 +120,6 @@ footer{
   color: #232563
 }
 
-@media screen and (max-width: 768px) {
-  h1.resize {
-    font-size: 40pt;
-  }
-}
-
 #navigation {
   background-color: rgba(72, 8, 111, 0.4);
   border: 0 none;
@@ -143,7 +135,6 @@ footer{
 }
 
 .avatar {
-  width: 50%;
+  width: 40%;
   border-radius: 50%;
-  margin-top: 140px;
 }
