--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,19 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>AniMate</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" rel="stylesheet">
-    <link href="css/hover.min.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-  </head>
-
-  <body id="nav">
-    <nav class="navbar sticky-top navbar-expand-md navbar-light text-uppercase" style="background-color: white;">
+<nav class="navbar sticky-top navbar-expand-md navbar-light text-uppercase" style="background-color: white;">
       <div class="col-md-1"></div>
         <a href="">
           <img src="assets/animateIcon.svg" class="navbar-brand branding">
@@ -48,13 +33,21 @@
     </nav>
 
     <section id="head">
-      <img src="assets/animateHead.png">
+      <img class="vari" src="assets/animateHead.png">
     </section>
 
     <section id="calendar">
       <div class="row overfillno">
-        <div class="col-md-10 col-xs-12 offset-md-1 justify-content-center">
+        <div class="col-md-10 col-xs-12 offset-md-1 justify-content-center text-center">
           <h2>Calendar</h2>
+        </div>
+      </div>
+    </section>
+
+    <section id="pets">
+      <div class="row overfillno">
+        <div class="col-md-10 col-xs-12 offset-md-1 justify-content-center text-center">
+          <h2>Pets</h2>
         </div>
       </div>
       <div class="row loginbox overfillno">
@@ -68,35 +61,21 @@
             <p>Age</p>
             <input type="text" name="age" placeholder="Enter Age">
             <input type="Submit" name="" placeholder="Login"><br>
-            <a href="home.html">Forgotten Password?</a><br>
-            <a href="create.html">Don't have an account?</a>
           </form>
         </div>
         <div class="col-lg-2"></div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 carded">
           <img src="assets/avatar.svg" class="avatar">
-          <h2>Pet</h2>
+          <h2>Add Pet</h2>
           <form>
-              <p>Username</p>
-              <input type="text" name="username" placeholder="Enter Username">
-              <p>Password</p>
-              <input type="password" name="password" placeholder="Enter Password">
+              <p>Name</p>
+              <input type="text" name="name" placeholder="Enter Name">
+              <p>Age</p>
+              <input type="text" name="age" placeholder="Enter Age">
               <input type="Submit" name="" placeholder="Login"><br>
-              <a href="home.html">Forgotten Password?</a><br>
-              <a href="create.html">Don't have an account?</a>
           </form>
         </div>
         <div class="col-lg-1"></div>
-      </div>
-    </section>
-
-    <section id="pets">
-      <div class="row overfillno">
-        <div class="col-2"></div>
-        <div class="col-8">
-          <h2>Pets</h2>
-        </div>
-        <div class="col-2"></div>
       </div>
     </section>
 
@@ -110,8 +89,44 @@
       </div>
     </section>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
-    </body>
-</html>
+      <!-- Site footer -->
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <h6>About</h6>
+            <p class="text-justify">AniMate is an interactive timetable and personal assistant revolving around your pets. By keeping track of feeding times, checkups and treatments, AniMate will clearly display tasks for you in a timely fashion. Whether you're inundated with animals or just a bit forgetful, AniMate can help!</p>
+          </div>
+  
+          <div class="col-xs-6 col-md-3">
+            <h6>Categories</h6>
+            <ul class="footer-links">
+              <li><a href="#calendar">Calendar</a></li>
+              <li><a href="#pets">Pets</a></li>
+              <li><a href="#profile">Profile</a></li>
+            </ul>
+          </div>
+  
+            <div class="col-xs-6 col-md-3">
+              <h6>Quick Links</h6>
+              <ul class="footer-links">
+                <li><a href="http://scanfcode.com/about/">About Us</a></li>
+                <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
+                <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
+                <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
+                <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
+              </ul>
+            </div>
+          </div>
+          <hr>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+              <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
+           <a href="#">AniMate</a>.
+              </p>
+            </div>
+          </div>
+        </div>
+    </footer>
