Old files removed. Added new layout. Linked pages.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -55,25 +55,15 @@
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 carded">
           <img src="assets/avatar.svg" class="avatar">
           <h2>Add Pet</h2>
-          <form>
-            <p>Name</p>
-            <input type="text" name="name" placeholder="Enter Name">
-            <p>Age</p>
-            <input type="text" name="age" placeholder="Enter Age">
-            <input type="Submit" name="" placeholder="Login"><br>
-          </form>
+          
+          {{> petaddForm}}
         </div>
         <div class="col-lg-2"></div>
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 carded">
           <img src="assets/avatar.svg" class="avatar">
           <h2>Add Pet</h2>
-          <form>
-              <p>Name</p>
-              <input type="text" name="name" placeholder="Enter Name">
-              <p>Age</p>
-              <input type="text" name="age" placeholder="Enter Age">
-              <input type="Submit" name="" placeholder="Login"><br>
-          </form>
+          
+          {{> petaddForm}}
         </div>
         <div class="col-lg-1"></div>
       </div>
@@ -130,3 +120,5 @@
           </div>
         </div>
     </footer>
+
+<script src="/js/scriptHome.js"></script>
