--- a/views/layouts/account.hbs
+++ b/views/layouts/account.hbs
@@ -11,7 +11,7 @@
     <link href="/css/hover.min.css" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="bGround">
     {{{body}}}
 
     <script src="/js/jquery.min.js"></script>
