--- a/views/partials/signinForm.hbs
+++ b/views/partials/signinForm.hbs
@@ -4,6 +4,6 @@
     <p>Password</p>
     <input type="password" name="password" placeholder="Enter Password">
     <input type="submit" name="submit" placeholder="Login"><br>
-    <a href="home.html">Forgotten Password?</a><br>
-    <a href="create.html">Don't have an account?</a>
+    <a href="">Forgotten Password?</a><br>
+    <a href="/create">Don't have an account?</a>
 </form>
