--- a/views/signIn.hbs
+++ b/views/signIn.hbs
@@ -3,7 +3,9 @@
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 carded">
             <img src="/assets/avatar.svg" class="avatar">
             <h2>AniMate Login</h2>
-            {{> signupForm}}
+            {{> signinForm}}
         </div>
     </div>
 </div>
+
+<script src="/js/scriptLog.js"></script>
