--- a/views/signUp.hbs
+++ b/views/signUp.hbs
@@ -1,8 +1,11 @@
 <div class="loginspace">
     <div class="row loginbox overfillno d-flex justify-content-center">
         <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 carded">
-            <img src="assets/avatar.svg" class="avatar">
+            <img src="/assets/avatar.svg" class="avatar">
             <h2>Create Account</h2>
+            {{> signupForm}}
         </div>
     </div>
 </div>
+
+<script src="/js/scriptLog.js"></script>
