--- a/views/partials/signupForm.hbs
+++ b/views/partials/signupForm.hbs
@@ -6,5 +6,5 @@
     <p>Confirm Password</p>
     <input type="password" name="confirmPassword" placeholder="Confirm Password">
     <input type="submit" value="Submit" id="signUpSubmit"><br>
-    <a href="login.html">Already have an account?</a>
+    <a href="/">Already have an account?</a>
 </form>
