--- a/views/home.hbs
+++ b/views/home.hbs
@@ -20,12 +20,12 @@
           </ul>
           <ul class="nav navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="login.html">Login</a></li>
+              <a class="nav-link" href="/">Login</a></li>
             <li class= "nav-item">
               <a class="nav-link disabled">or</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="create.html">Sign up</a>
+              <a class="nav-link" href="/create">Sign up</a>
             </li>
           </ul>
         </div>
