--- a/views/layouts/account.hbs
+++ b/views/layouts/account.hbs
@@ -10,11 +10,11 @@
     <link href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" rel="stylesheet">
     <link href="/css/hover.min.css" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/scriptLog.js"></script>
 </head>
 <body class="bGround">
     {{{body}}}
-
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
