--- a/views/partials/signinForm.hbs
+++ b/views/partials/signinForm.hbs
@@ -1,3 +1,8 @@
+{{#if userExist}}
+<div class="msguser">User exists please login instead!</a>
+{{else}} {{#if userDoesNotExist}}
+<div class="msguser">User created! Hurray!</a>
+{{/if}}{{/if}}
 <form>
     <p>Username</p>
     <input type="text" name="username" placeholder="Enter Username">
@@ -5,5 +10,5 @@
     <input type="password" name="password" placeholder="Enter Password">
     <input type="submit" name="submit" placeholder="Login"><br>
     <a href="">Forgotten Password?</a><br>
-    <a href="/create">Don't have an account?</a>
+    <a href="/">Don't have an account?</a>
 </form>
