--- a/views/partials/signupForm.hbs
+++ b/views/partials/signupForm.hbs
@@ -2,9 +2,9 @@
     <p>Username</p>
     <input type="text" name="username" id="username" placeholder="Enter Username/Email">
     <p>Password</p>
-    <input type="password" name="password" placeholder="Enter Password">
+    <input type="password" name="password" id="password" placeholder="Enter Password">
     <p>Confirm Password</p>
-    <input type="password" name="confirmPassword" placeholder="Confirm Password">
+    <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password">
     <input type="submit" value="Submit" id="signUpSubmit"><br>
-    <a href="/">Already have an account?</a>
+    <a href="/login">Already have an account?</a>
 </form>
