--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -129,8 +129,11 @@ footer{
 }
 
 .vari {
-  width: 100%;
-  height: 100%;
+  left: 50%;
+  top: 50%;
+  height: 100vh;
+  position: absolute;
+  transform: translate(-50%, -50%);
 }
 
 .site-footer
