--- a/views/partials/signinForm.hbs
+++ b/views/partials/signinForm.hbs
@@ -1,7 +1,7 @@
 {{#if userExist}}
-<div class="msguser">User exists please login instead!</a>
+<div class="msguser">User exists please login instead!</div>
 {{else}} {{#if userDoesNotExist}}
-<div class="msguser">User created! Hurray!</a>
+<div class="msguser">User created. Hurray!</div>
 {{/if}}{{/if}}
 <form action="/signin" method="POST">
     <p>Username</p>
