Connected Pets to users. Pet add changed.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -53,20 +53,27 @@
           <h2>Pets</h2>
         </div>
       </div>
-      <div class="row loginbox overfillno">
+      <div class="row petbox overfillno">
+        <div class="col-lg-3"></div>
+          <div class="col-lg-6 col-xs-12 carded">
+            <div class="row">
+            <div class="col-lg-6">
+              <img class="avatar-pet" src="assets/avatar.svg">
+            </div>
+            <div class="col-lg-6">
+              {{>petaddForm}}
+            </div>
+            </div>
+          </div>
+        <div class="col-lg-3"></div>
+      </div>
+      <div class="messageContainer text-center"></div>
+      <div class="row petbox overfillno">
         <div class="col-lg-1"></div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 carded">
-          <img src="assets/avatar.svg" class="avatar">
-          <h2>Add Pet</h2>
-          
-          {{> petaddForm}}
-        </div>
-        <div class="col-lg-2"></div>
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 carded">
-          <img src="assets/avatar.svg" class="avatar">
-          <h2>Add Pet</h2>
-          
-          {{> petaddForm}}
+        <div class="col-lg-10 col-xs-12">
+          <div class="row">
+            {{>petaddList}}
+          </div>
         </div>
         <div class="col-lg-1"></div>
       </div>
