--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,53 @@ body.bGround {
   transform: translate(0, -50%);
 }
 
+.petbox {
+  text-align: center;
+  color: #c3c8ca;
+  margin-bottom: 20px;
+}
+
+.petbox h2 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: #c3c8ca;
+}
+
+.petbox p {
+  padding-left: 10%;
+  text-align: left;
+  margin-bottom: 1%;
+  color: #c3c8ca;
+}
+
+.petbox input {
+  margin-bottom: 20px;
+}
+
+.petbox input[type="text"], input[type="password"] {
+  border: none;
+  border-bottom: 1px solid;
+  background: transparent;
+  outline: none;
+  width: 80%;
+  color: #c3c8ca;
+}
+
+.petbox input[type="submit"] {
+  border: none;
+  outline: none;
+  background: #720429;
+  color: #fff;
+  width: 50%;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
+.petbox input[type="submit"]:hover {
+  cursor: pointer;
+  background: #440e20;
+}
+
 .msguser {
   color: #c3c8ca;
   padding-bottom: 10px;
@@ -75,9 +122,9 @@ body.bGround {
 }
 
 .carded {
-  background-color: #111;
+  background-color: #151515;
   border-radius: 20px;
-  padding:35px;
+  padding: 20px;
 }
 
 .avatar {
@@ -85,8 +132,13 @@ body.bGround {
   border-radius: 50%;
 }
 
+.avatar-pet {
+  width: 70%;
+  border-radius: 50%;
+}
+
 footer{
-  background-color: #111;
+  background-color: #151515;
   color: #fff;
 }
 
@@ -139,7 +191,7 @@ footer{
 
 .site-footer
 {
-  background-color:#111;
+  background-color:#151515;
   padding:45px 0 20px;
   font-size:15px;
   line-height:24px;
