--- a/views/partials/signinForm.hbs
+++ b/views/partials/signinForm.hbs
@@ -3,6 +3,7 @@
 {{else}} {{#if userDoesNotExist}}
 <div class="msguser">User created. Hurray!</div>
 {{/if}}{{/if}}
+<div class="messageContainer"></div>
 <form action="/signin" method="POST">
     <p>Username</p>
     <input type="text" name="username" placeholder="Enter Username">
