--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,6 @@
 <div class="loader-wrapper" id="overlayer">
-  <img class="loader" src="assets/animateIcon.svg">
+  <img class="loader-icon" src="assets/animateIcon.svg">
+  <span class="loader"></span>
 </div>
 
 <nav class="navbar sticky-top navbar-expand-md navbar-light text-uppercase" style="background-color: white;">
