--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -70,6 +70,20 @@ body.bGround {
   background: #440e20;
 }
 
+.petbox select {
+  border: none;
+  border-bottom: 1px solid;
+  background: transparent;
+  outline: none;
+  width: 80%;
+  color: #c3c8ca;
+  margin-bottom: 20px;
+}
+
+.petbox option {
+  background-color: #151515;
+}
+
 .msguser {
   color: #c3c8ca;
   padding-bottom: 10px;
