--- a/views/partials/petaddForm.hbs
+++ b/views/partials/petaddForm.hbs
@@ -5,5 +5,5 @@
     <input type="text" name="age" placeholder="Enter Age">
     <p>Breed</p>
     <input type="text" name="breed" placeholder="Enter Breed">
-    <input type="submit" value="Submit" id="signUpSubmit"><br>
+    <input type="submit" value="Submit"><br>
 </form>
