--- a/views/partials/reminderList.hbs
+++ b/views/partials/reminderList.hbs
@@ -1,15 +1,15 @@
 {{!-- Contacts List --}}
 <div class="messageContainer"></div>
-{{#if petsExist}}
-{{#each pets}}
+{{#if remindersExist}}
+{{#each reminders}}
 <div class="col-lg-4 col-xs-12 carded">
-    <h2>{{this.name}}</h2>
-    <p>{{this.age}}</p>
-    <p>{{this.breed}}</p>
+    <h2>{{this.pet}}</h2>
+    <p>{{this.event}}</p>
+    <p>{{this.time}}</p>
 </div>
 {{/each}}
 {{else}}
 <div class="col-xs-12 text-center">
-    <h1>No Pets</h1>
+    <h1>No Events</h1>
 </div>
 {{/if}}
