Added redirect if no pet exists. Styling changes.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,6 +13,10 @@ body.bGround {
   background-position: center;
 }
 
+.title {
+  margin-bottom: 20px;
+}
+
 .loginspace {
   max-height: 50vh;
 }
@@ -151,6 +155,16 @@ body.bGround {
   border-radius: 50%;
 }
 
+.petContainer {
+  font-size: 20pt;
+  padding-bottom: 20px;
+}
+
+.reminderContainer {
+  font-size: 20pt;
+  padding-bottom: 20px;
+}
+
 footer{
   background-color: #151515;
   color: #fff;
@@ -169,7 +183,7 @@ footer{
 }
 
 .btn-primary{
-  background-color: #bada55;
+  background-color: #ffffff;
 }
 
 .btn-primary:hover{
@@ -201,6 +215,22 @@ footer{
   height: 100vh;
   position: absolute;
   transform: translate(-50%, -50%);
+}
+
+.load-not {
+  position: absolute;
+  bottom: 0px;
+  width: 100vw;
+  height: 15vh;
+  background: #fff;
+  box-shadow: 0 0 50px 50px #fff;
+}
+
+.load-not p {
+  text-align: center;
+  font-size: 20pt;
+  margin-top: 3vh;
+  color: #222222;
 }
 
 .site-footer
