--- a/views/home.hbs
+++ b/views/home.hbs
@@ -46,7 +46,7 @@
 
     <section id="calendar">
       <div class="row overfillno" style="margin-top: 100vh;">
-        <div class="col-md-10 col-xs-12 offset-md-1 justify-content-center text-center">
+        <div class="title col-md-10 col-xs-12 offset-md-1 justify-content-center text-center">
           <h2>Calendar</h2>
         </div>
       </div>
@@ -65,7 +65,7 @@
           </div>
         <div class="col-lg-3"></div>
       </div>
-      <div class="messageContainer2 text-center"></div>
+      <div class="reminderContainer text-center"></div>
       <div class="row petbox overfillno">
         <div class="col-lg-1"></div>
         <div class="col-lg-10 col-xs-12">
@@ -79,7 +79,7 @@
 
     <section id="pets">
       <div class="row overfillno">
-        <div class="col-md-10 col-xs-12 offset-md-1 justify-content-center text-center">
+        <div class="title col-md-10 col-xs-12 offset-md-1 justify-content-center text-center">
           <h2>Pets</h2>
         </div>
       </div>
@@ -98,7 +98,7 @@
           </div>
         <div class="col-lg-3"></div>
       </div>
-      <div class="messageContainer text-center"></div>
+      <div class="petContainer text-center"></div>
       <div class="row petbox overfillno">
         <div class="col-lg-1"></div>
         <div class="col-lg-10 col-xs-12">
@@ -112,7 +112,7 @@
 
     <section id="profile">
       <div class="row overfillno">
-        <div class="col-md-10 col-xs-12 offset-md-1 justify-content-center text-center">
+        <div class="title col-md-10 col-xs-12 offset-md-1 justify-content-center text-center">
           <h2>Profile</h2>
         </div>
       </div>
@@ -136,12 +136,12 @@
     <footer class="site-footer">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12 col-md-6">
+          <div class="col-xs-12 col-md-9">
             <h6>About</h6>
             <p class="text-justify">AniMate is an interactive timetable and personal assistant revolving around your pets. By keeping track of feeding times, checkups and treatments, AniMate will clearly display tasks for you in a timely fashion. Whether you're inundated with animals or just a bit forgetful, AniMate can help!</p>
           </div>
   
-          <div class="col-xs-6 col-md-3">
+          <div class="col-xs-12 col-md-3">
             <h6>Categories</h6>
             <ul class="footer-links">
               <li><a href="#calendar">Calendar</a></li>
@@ -149,17 +149,6 @@
               <li><a href="#profile">Profile</a></li>
             </ul>
           </div>
-  
-            <div class="col-xs-6 col-md-3">
-              <h6>Quick Links</h6>
-              <ul class="footer-links">
-                <li><a href="http://scanfcode.com/about/">About Us</a></li>
-                <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
-                <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
-                <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
-                <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
-              </ul>
-            </div>
           </div>
           <hr>
         </div>
@@ -195,6 +184,9 @@
       <source media="(min-width: 576px)" class="vari" srcset="assets/animateHeadMed.png">
       <img class="vari" src="assets/animateHeadSml.png" alt="HeaderImage">
       </picture>
+      <div class="load-not">
+        <p>Login or Sign Up to begin!</p>
+      </div>
     </section>
           {{/if}}
         
