--- a/views/partials/petaddForm.hbs
+++ b/views/partials/petaddForm.hbs
@@ -1,4 +1,4 @@
-<form action="/petadd" method="POST">
+<form action="/petadd" method="POST" autocomplete="off">
     <p>Name</p>
     <input type="text" name="name" placeholder="Enter Name">
     <p>Age</p>
