--- a/views/partials/signinForm.hbs
+++ b/views/partials/signinForm.hbs
@@ -4,7 +4,7 @@
 <div class="msguser">User created. Hurray!</div>
 {{/if}}{{/if}}
 <div class="messageContainer"></div>
-<form action="/signin" method="POST">
+<form action="/signin" method="POST" autocomplete="off">
     <p>Username</p>
     <input type="text" name="username" placeholder="Enter Username">
     <p>Password</p>
