--- a/views/partials/signupForm.hbs
+++ b/views/partials/signupForm.hbs
@@ -1,4 +1,4 @@
-<form action="/signup" method="POST">
+<form action="/signup" method="POST" autocomplete="off">
     <p>Username</p>
     <input type="text" name="username" id="username" placeholder="Enter Username/Email">
     <p>Password</p>
