Simplified Footer. Added border to cards.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -149,22 +149,24 @@
               <li><a href="#profile">Profile</a></li>
             </ul>
           </div>
-          </div>
-          <hr>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 col-sm-6 col-xs-12">
-              <p class="copyright-text">Copyright &copy; 2020 All Rights Reserved by 
-           <a href="#">AniMate</a>.
-              </p>
-            </div>
+        <hr>
+      </div>
+      
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">&copy; 2020 All Rights Reserved by 
+            <a href="#">AniMate</a>.
+            </p>
           </div>
         </div>
+      </div>
     </footer>
+          
           {{else}}
 
-          <ul class="nav navbar-nav ml-auto">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a></li>
             <li class= "nav-item">
@@ -188,6 +190,7 @@
         <p>Login or Sign Up to begin!</p>
       </div>
     </section>
+          
           {{/if}}
         
 <script src="/js/scriptHome.js"></script>
