--- a/views/partials/reminderList.hbs
+++ b/views/partials/reminderList.hbs
@@ -2,7 +2,7 @@
 <div class="messageContainer"></div>
 {{#if remindersExist}}
 {{#each reminders}}
-<div class="col-lg-4 col-xs-12 carded">
+<div class="col-lg-4 col-xs-12 carded-inner">
     <h2>{{this.pet}}</h2>
     <p>{{this.event}}</p>
     <p>{{this.time}}</p>
