--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -145,6 +145,13 @@ body.bGround {
   padding: 20px;
 }
 
+.carded-inner {
+  background-color: #151515;
+  border: 5px solid #fff;
+  border-radius: 20px;
+  padding: 20px;
+}
+
 .avatar {
   width: 40%;
   border-radius: 50%;
@@ -156,44 +163,13 @@ body.bGround {
 }
 
 .petContainer {
-  font-size: 20pt;
+  font-size: 14pt;
   padding-bottom: 20px;
 }
 
 .reminderContainer {
-  font-size: 20pt;
+  font-size: 14pt;
   padding-bottom: 20px;
-}
-
-footer{
-  background-color: #151515;
-  color: #fff;
-}
-
-.wait {
-  animation-delay: 0.5s;
-}
-
-.wait2 {
-  animation-delay: 1s;
-}
-
-.nav {
-  margin-right: 10px;
-}
-
-.btn-primary{
-  background-color: #ffffff;
-}
-
-.btn-primary:hover{
-  background-color: black;
-}
-
-#navigation {
-  background-color: rgba(72, 8, 111, 0.4);
-  border: 0 none;
-  margin: 0;
 }
 
 .branding {
@@ -221,109 +197,48 @@ footer{
   position: absolute;
   bottom: 0px;
   width: 100vw;
-  height: 15vh;
-  background: #fff;
-  box-shadow: 0 0 50px 50px #fff;
+  height: 10vh;
+  background: rgba(255, 255, 255, 0.7);
+  box-shadow: 0 0 100px 100px rgba(255, 255, 255, 0.7);
 }
 
 .load-not p {
   text-align: center;
   font-size: 20pt;
-  margin-top: 3vh;
-  color: #222222;
+  color: #0000007c;
 }
 
-.site-footer
-{
-  background-color:#151515;
+footer{
+  background-color: #151515;
+  color: #9c9c9c;
+}
+
+.site-footer {
   padding:45px 0 20px;
-  font-size:15px;
-  line-height:24px;
-  color:#737373;
 }
-.site-footer hr
-{
-  border-top-color:#bbb;
-  opacity:0.5
+
+.site-footer hr {
+  border-top: 1px solid #9c9c9c;
 }
-.site-footer hr.small
-{
-  margin:20px 0
+
+.site-footer a {
+  color:#9c9c9c;
 }
-.site-footer h6
-{
+.site-footer a:hover {
+  color:#494949;
+  text-decoration:none;
+}
+
+.site-footer h6 {
   color:#fff;
   font-size:16px;
   text-transform:uppercase;
-  margin-top:5px;
   letter-spacing:2px
 }
-.site-footer a
-{
-  color:#737373;
-}
-.site-footer a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
-}
-.footer-links
-{
-  padding-left:0;
-  list-style:none
-}
-.footer-links li
-{
-  display:block
-}
-.footer-links a
-{
-  color:#737373
-}
-.footer-links a:active,.footer-links a:focus,.footer-links a:hover
-{
-  color:#3366cc;
-  text-decoration:none;
-}
-.footer-links.inline li
-{
-  display:inline-block
-}
-.site-footer .social-icons
-{
-  text-align:right
-}
-.site-footer .social-icons a
-{
-  width:40px;
-  height:40px;
-  line-height:40px;
-  margin-left:6px;
-  margin-right:0;
-  border-radius:100%;
-  background-color:#33353d
-}
-.copyright-text
-{
-  margin:0
-}
-@media (max-width:991px)
-{
-  .site-footer [class^=col-]
-  {
-    margin-bottom:30px
-  }
-}
-@media (max-width:767px)
-{
-  .site-footer
-  {
-    padding-bottom:0
-  }
-  .site-footer .copyright-text,.site-footer .social-icons
-  {
-    text-align:center
-  }
+
+.footer-links {
+  padding-left: 0;
+  list-style: none;
 }
 
 .loader-wrapper {
