--- a/views/partials/petaddList.hbs
+++ b/views/partials/petaddList.hbs
@@ -2,7 +2,7 @@
 <div class="messageContainer"></div>
 {{#if petsExist}}
 {{#each pets}}
-<div class="col-lg-4 col-xs-12 carded">
+<div class="col-lg-4 col-xs-12 carded-inner">
     <h2>{{this.name}}</h2>
     <p>{{this.age}}</p>
     <p>{{this.breed}}</p>
